--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-  <head>
-    <title>Push Demo</title>
-    <script type="application/javascript" src="/client.js"></script>
-  </head>
+    <head>
+        <title>Push Demo</title>
+        <script type="application/javascript" src="/client.js"></script>
+    </head>
 
-  <body>
-    Service Worker Demo
-  </body>
+    <body>
+        Service Worker Demo
+    </body>
+
+    <a href="http://localhost:8080/api/social/facebook">Connetti a facebook</a>
 </html>
