--- a/index.html
+++ b/index.html
@@ -3,10 +3,69 @@
         <title>Push Demo</title>
         <script type="application/javascript" src="/client.js"></script>
     </head>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font: 13px Helvetica, Arial;
+        }
+        form {
+            background: #000;
+            padding: 3px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        form input {
+            border: 0;
+            padding: 10px;
+            width: 90%;
+            margin-right: 0.5%;
+        }
+        form button {
+            width: 9%;
+            background: rgb(130, 224, 255);
+            border: none;
+            padding: 10px;
+        }
+        #messages {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        #messages li {
+            padding: 5px 10px;
+        }
+        #messages li:nth-child(odd) {
+            background: #eee;
+        }
+    </style>
 
     <body>
         Service Worker Demo
-    </body>
+        <ul id="messages"></ul>
+        <form action=""><input id="m" autocomplete="off" /><button>Send</button></form>
 
-    <a href="http://localhost:8080/api/social/facebook">Connetti a facebook</a>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script>
+            var socket = io();
+            $('form').submit(function(e) {
+                e.preventDefault(); // prevents page reloading
+                socket.emit('chat', $('#m').val());
+                $('#m').val('');
+                return false;
+            });
+            socket.on('broadcast', function(msg) {
+                $('#messages').append($('<li>').text(msg));
+            });
+            socket.on('chat', function(msg) {
+                $('#messages').append($('<li>').text(msg));
+            });
+        </script>
+        <a href="http://localhost:8080/api/social/facebook">Connetti a facebook</a>
+    </body>
 </html>
